--- a/public/views/dashborad.html
+++ b/public/views/dashborad.html
@@ -22,34 +22,195 @@
 
 
                 <nav class="user">
-                    <i class="fa-regular fa-bookmark"></i>
-                    <i class="fa-regular fa-user"></i>
+                    
+                    <a href="#"><i class="fa-regular fa-bookmark" id="bookmark"></i></a>
+                    
+                    <a href="#"><i class="fa-regular fa-user" id="user-menu"></i></a>
                 </nav>
             </header>
             <main>
+
+                <h3>New realases</h3>
+
+                <div class="top-pics">
+                    <div class="film-card">
+                        <img src="../img/logo.svg" alt="Film" id="new-rel1">
+                        <div class= "overlay">
+                            <i class="fa-regular fa-bookmark"></i>
+    
+                             <div class="rate">
+                                <label>8.3</label>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="film-card">
+                        <img src="../img/logo.svg" alt="Film" id="new-rel2">
+                        <div class= "overlay">
+                            <i class="fa-regular fa-bookmark"></i>
+    
+                             <div class="rate">
+                                <label>8.3</label>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="film-card">
+                        <img src="../img/logo.svg" alt="Film" id="new-rel3">
+                        <div class= "overlay">
+                            <i class="fa-regular fa-bookmark"></i>
+    
+                             <div class="rate">
+                                <label>8.3</label>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="film-card">
+                        <img src="../img/logo.svg" alt="Film" id="new-rel4">
+                        <div class= "overlay">
+                            <i class="fa-regular fa-bookmark"></i>
+    
+                             <div class="rate">
+                                <label>8.3</label>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="film-card">
+                        <img src="../img/logo.svg" alt="Film" id="new-rel5">
+                        <div class= "overlay">
+                            <i class="fa-regular fa-bookmark"></i>
+    
+                             <div class="rate">
+                                <label>8.3</label>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+    
+                </div>
+
             <h3>Top pics</h3>
 
             <div class="top-pics">
-                <img src="../img/logo.svg" alt="Film" id="top-pics1">
-                <div class= "overlay">
-                    <i class="fa-regular fa-bookmark"></i>
-                    <label>8.3</label>
-                    <i class="fa-regular fa-star"></i>
+                <div class="film-card">
+                    <img src="../img/logo.svg" alt="Film" id="top-pics1">
+                    <div class= "overlay">
+                        <i class="fa-regular fa-bookmark"></i>
+
+                         <div class="rate">
+                            <label>8.3</label>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
                 </div>
-                <img src="../img/logo.svg" alt="Film" id="top-pics2">
-                <img src="../img/logo.svg" alt="Film" id="top-pics3">
-                <img src="../img/logo.svg" alt="Film" id="top-pics4">
-                <img src="../img/logo.svg" alt="Film" id="top-pics5">
+                
+                <div class="film-card">
+                    <img src="../img/logo.svg" alt="Film" id="top-pics2">
+                    <div class= "overlay">
+                        <i class="fa-regular fa-bookmark"></i>
+
+                         <div class="rate">
+                            <label>8.3</label>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="film-card">
+                    <img src="../img/logo.svg" alt="Film" id="top-pics3">
+                    <div class= "overlay">
+                        <i class="fa-regular fa-bookmark"></i>
+
+                         <div class="rate">
+                            <label>8.3</label>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="film-card">
+                    <img src="../img/logo.svg" alt="Film" id="top-pics4">
+                    <div class= "overlay">
+                        <i class="fa-regular fa-bookmark"></i>
+
+                         <div class="rate">
+                            <label>8.3</label>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="film-card">
+                    <img src="../img/logo.svg" alt="Film" id="top-pics5">
+                    <div class= "overlay">
+                        <i class="fa-regular fa-bookmark"></i>
+
+                         <div class="rate">
+                            <label>8.3</label>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+                </div>
 
             </div>
             <h3>Most Popular</h3>
 
             <div class="most-popular">
-                <img src="../img/logo.svg" alt="Film" id="top-pics1">
-                <img src="../img/logo.svg" alt="Film" id="top-pics2">
-                <img src="../img/logo.svg" alt="Film" id="top-pics3">
-                <img src="../img/logo.svg" alt="Film" id="top-pics4">
-                <img src="../img/logo.svg" alt="Film" id="top-pics5">
+                <div class="film-card">
+                    <img src="../img/logo.svg" alt="Film" id="most-popular1">
+                    <div class= "overlay">
+                        <i class="fa-regular fa-bookmark"></i>
+
+                         <div class="rate">
+                            <label>8.3</label>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="film-card">
+                    <img src="../img/logo.svg" alt="Film" id="most-popular2">
+                    <div class= "overlay">
+                        <i class="fa-regular fa-bookmark"></i>
+
+                         <div class="rate">
+                            <label>8.3</label>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="film-card">
+                    <img src="../img/logo.svg" alt="Film" id="most-popular2">
+                    <div class= "overlay">
+                        <i class="fa-regular fa-bookmark"></i>
+
+                         <div class="rate">
+                            <label>8.3</label>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="film-card">
+                    <img src="../img/logo.svg" alt="Film" id="most-popular2">
+                    <div class= "overlay">
+                        <i class="fa-regular fa-bookmark"></i>
+
+                         <div class="rate">
+                            <label>8.3</label>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="film-card">
+                    <img src="../img/logo.svg" alt="Film" id="most-popular2">
+                    <div class= "overlay">
+                        <i class="fa-regular fa-bookmark"></i>
+
+                         <div class="rate">
+                            <label>8.3</label>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+                </div>
 
             </div>
             </main>
