--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,8 +13,6 @@ header{
     display: flex;
     flex-direction:row;
     justify-content: space-between;
-    min-height: 10%;
-    
 }
 
 
@@ -52,7 +50,7 @@ header a:hover{
 
 main{
     flex : 1;
-    min-height: 85%;
+
 }
 
 
@@ -80,11 +78,13 @@ main{
     align-items: center;
     margin: 2.7em auto; /* Auto wyrównuje kontener na środku */
     padding: 3em 1em 0 1em; /* Możesz zmniejszyć padding, jeśli potrzeba */
-    background-color: rgba(255 255, 255, 0.04);
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     border-radius: 10px;
    
     width: 75%; /* Szerokość będzie 90% okna, ale nie większa niż max-width */
+
+    
+    background: rgba(207, 204, 210, 0.08);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     
 }
 
@@ -125,12 +125,13 @@ input{
     line-height: 3em;
     font-size: 1.2em;
     margin: 0.5em 0em 4em 0em;
-    background-color: black;
     color : white;
-    border: 1px solid white;
     text-size-adjust: 100%;
     min-width: 65vw;
     border-radius: 5px;
+    background: #291A36;
+    border: 1px solid #FFFFFF;
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 
@@ -145,7 +146,6 @@ footer{
     display : flex;
     flex-direction: row;
     justify-content: space-between;
-    max-height: 5vw;
 }
 
 
